# breakdown-rs

./: .env.idp.example  .gitignore  .gitleaks.toml  LICENSE  README.md  audit.toml  create_issues.sh
backend/: .mutants.toml  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  deny.toml  docker-compose.dev.yml  docker-compose.idp.yml  docker-compose.prod.yml
backend/.cargo/: mutants.toml
backend/.github/workflows/: architecture-checks.yml  mutation-testing.yml
backend/.patches/kameo_es/: Cargo.toml
backend/.patches/kameo_es/core/: Cargo.toml
backend/.patches/kameo_es/macros/: Cargo.toml
backend/.patches/kameo_es/src/: command_service.rs  connection_pool.rs  entity_actor.rs  error.rs  event_handler.rs  lib.rs  transaction.rs
backend/.pi/prompts/: quality-check.md
backend/config/: default_costume_categories.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: lib.rs  main.rs  state.rs
backend/crates/api/tests/: route_coverage.rs
backend/crates/architecture/: Cargo.toml
backend/crates/architecture/src/: lib.rs
backend/crates/architecture/tests/: architecture_tests.rs  architecture_tests.rs.disabled
backend/crates/core/: Cargo.toml
backend/crates/core/proptest-regressions/: proptest.txt
backend/crates/core/src/: error.rs  lib.rs  proptest.rs  shared.rs  shared_test.rs  testing.rs
backend/crates/fuzz-targets/: Cargo.toml
backend/crates/fuzz-targets/fuzz_targets/: create_character.rs  create_scene.rs  hierarchy_requests.rs  shooting_day_member.rs  update_requests.rs
backend/crates/fuzz-targets/src/: lib.rs
backend/crates/infra/: Cargo.toml
backend/crates/infra/bootstrap/: 01_create_roles.sql  02_grant_app_permissions.sql  README.md
backend/crates/infra/migrations/: 20240621000001_smoke_check.down.sql  20240621000001_smoke_check.up.sql  20250623000001_projection_schema.down.sql  20250623000001_projection_schema.up.sql  20250624000001_production_hierarchy.down.sql  20250624000001_production_hierarchy.up.sql  20250625000001_scene_episode_scope.down.sql  20250625000001_scene_episode_scope.up.sql  20250626000001_character_season_scope.down.sql  20250626000001_character_season_scope.up.sql  20250627000001_costume_scope_free.down.sql  20250627000001_costume_scope_free.up.sql  20250628000001_membership_projection.down.sql  20250628000001_membership_projection.up.sql  20250629000001_audit_projection.down.sql  20250629000001_audit_projection.up.sql  20250630000001_shooting_day_and_scene_summary.down.sql  20250630000001_shooting_day_and_scene_summary.up.sql  20250701000001_costume_category_and_detail_fields.down.sql  20250701000001_costume_category_and_detail_fields.up.sql  (+4 more)
backend/crates/integration-tests/: Cargo.toml
backend/crates/test_support/: Cargo.toml
backend/docs/: core-domain-model.puml
backend/docs/operations/: runbooks.md
backend/docs/security/: README.md
backend/git-hooks/: commit-msg  pre-commit
backend/mutants.out.old/: lock.json  mutants.json  outcomes.json  unviable.txt
backend/mutants.out.old/diff/: crates__infra__src__event_store__command_adapters.rs_line_112_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_123_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_136_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_160_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_168_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_181_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_191_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_201_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_211_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_221_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_231_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_258_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_266_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_276_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_289_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_302_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_312_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_325_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_342_col_5.diff  crates__infra__src__event_store__command_adapters.rs_line_355_col_5.diff  crates__infra__src__event_store__command_adapters.rs_line_362_col_37.diff  crates__infra__src__event_store__command_adapters.rs_line_362_col_37_001.diff  crates__infra__src__event_store__command_adapters.rs_line_362_col_5.diff  crates__infra__src__event_store__command_adapters.rs_line_369_col_25.diff  crates__infra__src__event_store__command_adapters.rs_line_369_col_5.diff  crates__infra__src__event_store__command_adapters.rs_line_369_col_5_001.diff  crates__infra__src__event_store__command_adapters.rs_line_369_col_5_002.diff  crates__infra__src__event_store__command_adapters.rs_line_372_col_31.diff  crates__infra__src__event_store__command_adapters.rs_line_372_col_31_001.diff  crates__infra__src__event_store__command_adapters.rs_line_384_col_5.diff  crates__infra__src__event_store__command_adapters.rs_line_417_col_5.diff  crates__infra__src__event_store__command_adapters.rs_line_426_col_5.diff  crates__infra__src__event_store__command_adapters.rs_line_427_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_428_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_436_col_18.diff  crates__infra__src__event_store__command_adapters.rs_line_436_col_5.diff  crates__infra__src__event_store__command_adapters.rs_line_51_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_62_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_75_col_9.diff  crates__infra__src__event_store__command_adapters.rs_line_88_col_9.diff  (+74 more)
backend/scripts/: postgres-init-roles.sh  provision-garage.sh
(+411 files in other folders)
