[workspace]
resolver = "2"
members = [
    "crates/core",              # Domain-Modell, Event-Sourcing-Logik, Ports (Traits)
    "crates/api",               # Axum-Server, HTTP-Grenze
    "crates/infra",             # Infrastruktur-Implementierungen (PostgreSQL, Event Store)
    "crates/integration-tests", # Black-box Integrationstests (dev-only)
    # "crates/architecture",      # Architekturtests (arch_test) – vorübergehend deaktiviert (arch_test nicht auf crates.io)
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Tobias Rademacher <your.email@example.com>"]
license = "AGPL-3.0"

[workspace.dependencies]
# Web & API
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Datenbank & Event Sourcing
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Event Sourcing (ES)
kameo = "0.12"      # Das zugrundeliegende Actor-Framework
kameo_es = { git = "https://github.com/sierra-db/kameo_es", branch = "main", features = ["postgres"] } 
thiserror = "2.0"
anyhow = "1.0"
rust_decimal = "1.36"

[workspace.lints.rust]
unsafe_code = "forbid"
edition_mismatch = "warn"