[workspace]
resolver = "2"
members = [
    "crates/core",              # Domain-Modell, Event-Sourcing-Logik, Ports (Traits)
    "crates/api",               # Axum-Server, HTTP-Grenze
    "crates/infra",             # Infrastruktur-Implementierungen (PostgreSQL, Event Store)
    "crates/integration-tests", # Black-box Integrationstests (dev-only)
    "crates/architecture",      # Architekturtests (rust_arkitect + cargo-deny, ADR-017)
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Tobias Rademacher <your.email@example.com>"]
license = "AGPL-3.0"

[workspace.dependencies]
# Web & API
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Datenbank & Event Sourcing
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Event Sourcing (ES)
kameo = "0.19"      # Das zugrundeliegende Actor-Framework
kameo_es = { git = "https://github.com/sierra-db/kameo_es", branch = "main", features = ["postgres"] }
redis = "0.32"      # SierraDB RESP3 client (used by kameo_es)
sierradb-client = "0.1" 
thiserror = "2.0"
anyhow = "1.0"
rust_decimal = { version = "1.36", features = ["db-postgres"] }

# Async traits (object-safe, mockable ports)
async-trait = "0.1"

# OpenAPI generation (ADR-006)
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

[workspace.lints.rust]
unsafe_code = "forbid"
edition_mismatch = "warn"