[package]
name = "kameo_es"
version = "0.1.0"
edition = "2021"
authors = ["Ari Seyhun <dev@tqwewe.com>"]
license = "MIT OR Apache-2.0"
description = "Event sourcing library built on Kameo actors and SierraDB"
readme = "README.md"
homepage = "https://github.com/sierra-db/kameo_es"
repository = "https://github.com/sierra-db/kameo_es"
keywords = ["event-sourcing", "cqrs", "actors", "kameo", "sierradb"]
categories = ["database", "concurrency", "asynchronous"]

[dependencies]
kameo_es_core = { path = "core" }

anyhow = "1.0"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
futures = "0.3"
kameo = "0.22"
lru = "0.16"
once_cell = "1.21"
redis = { version = "0.32", features = ["tokio-comp"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
sierradb-client = { version = "0.1.0", features = ["tokio-comp"] }
thiserror = "2.0"
tokio = { version = "1.37", features = ["fs", "sync", "io-util"] }
tokio-util = "0.7.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.10", features = ["serde", "v4"] }

# Optional dependencies
bson = { version = "3.0", features = ["chrono-0_4", "uuid-1"], optional = true }
backon = { version = "1.5", features = ["tokio-sleep"], optional = true }
mongodb = { version = "3.1", optional = true }
sqlx = { version = "0.9", features = ["runtime-tokio"], optional = true }

[dev-dependencies]
tokio = { version = "1.37", features = ["sync", "rt-multi-thread"] }

[features]
default = []
mongodb = ["dep:bson", "dep:mongodb"]
postgres = ["dep:backon", "dep:sqlx", "sqlx/postgres", "sqlx/uuid"]
sqlite = ["dep:sqlx", "sqlx/sqlite"]
