# crates/architecture/Cargo.toml
[package]
name = "architecture_tests"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
publish = false

[dependencies]
# Pfade zu euren eigentlichen Projekt-Crates, die getestet werden sollen
api = { path = "../api" }
core = { path = "../core" }
infra = { path = "../infra" }

[dev-dependencies]
arch_test = "0.1" # Das Architektur-Test-Framework
