[package]
name = "breakdown_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Exposes the unit-test helper module (`testing`) to integration-test crates.
# Not compiled into production builds.
testing = []

[dependencies]
# Domain-Modell: keine sqlx, kein axum, keine Infrastruktur
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true

# Event Sourcing (Actor-Framework)
kameo.workspace = true
kameo_es.workspace = true

# Domain-Modell: Rustische Decimals
rust_decimal.workspace = true

# Tests
rstest = "0.24"
