[package]
name = "breakdown_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Domain-Modell: keine sqlx, kein axum, keine Infrastruktur
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true

# Event Sourcing (Actor-Framework)
kameo.workspace = true
kameo_es.workspace = true

# Domain-Modell: Rustische Decimals
rust_decimal.workspace = true

# OpenAPI schema derives für Read-Model DTOs (ADR-006)
utoipa.workspace = true

# Async traits für Ports (object-safe, mockierbar)
async-trait.workspace = true

# Tests
rstest = "0.26"

[dev-dependencies]
test_support = { path = "../test_support" }
