[package]
name = "infra"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Core-Domäne
breakdown_core = { path = "../core" }

# Event Sourcing & Actor
kameo.workspace = true
kameo_es.workspace = true

# Datenbank
sqlx.workspace = true

# SierraDB / RESP3 Verbindung
redis.workspace = true
sierradb-client.workspace = true

# Serialisierung / IDs / Zeit
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
rust_decimal.workspace = true

# Async runtime helpers (background projection streams)
tokio.workspace = true

# Logging
tracing.workspace = true

# Error handling
anyhow.workspace = true

