[package]
name = "infra"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Core-Domäne
breakdown_core = { path = "../core" }

# Event Sourcing & Actor
kameo.workspace = true
kameo_es.workspace = true

# Datenbank
sqlx.workspace = true

# SierraDB / RESP3 Verbindung
redis.workspace = true
sierradb-client.workspace = true

# Serialisierung / IDs / Zeit
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
rust_decimal.workspace = true

# TOML parsing for the configurable default costume-category seed (ADR).
toml = "0.8"

# S3-compatible object storage via OpenDAL (Garage adapter).
opendal = { version = "0.52", features = ["services-s3"] }

# Image decoding, re-encoding, and EXIF-stripping (thumbnailing saga).
image = { version = "0.25", features = ["jpeg", "png", "webp"] }

# EXIF reading (orientation detection for the thumbnail saga).
kamadak-exif = "0.6.1"

# Async runtime helpers (background projection streams)
tokio.workspace = true

# Stream utilities (Lister.next() for opendal, etc.)
futures = "0.3"

# Logging
tracing.workspace = true

# Error handling
anyhow.workspace = true

# Async traits (object-safe, mockable ports)
async-trait.workspace = true

# Random jitter for backoff
rand.workspace = true
fastrand = "2"

