[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false


[features]
# Enables `infra::testing` imports in integration-tests tests.
# Test files gated with `#[cfg(feature = "infra-testing")]` require this.
infra-testing = []
[lib]
crate-type = ["lib"]

[dependencies]

[dev-dependencies]
breakdown_core = { path = "../core", features = ["testing"] }
infra = { path = "../infra", features = ["testing"] }

# Event-sourcing traits used by the in-memory aggregate command checks.
kameo_es.workspace = true

# Async test runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Database access & migrations
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid", "chrono", "json", "migrate"] }

# Timestamps used by projector tests
chrono = { workspace = true }

# Deterministic IDs
uuid = { workspace = true, features = ["v7"] }

# Error handling / utilities
anyhow = { workspace = true }

# JSON for Redis events
serde_json = "1.0"

# Logging / tracing (for SierraDB/kameo_es debug output in CI)
redis = { workspace = true }
ciborium = "0.2"
tracing-subscriber = { workspace = true }
