[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["lib"]

[dependencies]

[dev-dependencies]
breakdown_core = { path = "../core" }
infra = { path = "../infra" }
test_support = { path = "../test_support" }

# Event-sourcing traits used by the in-memory aggregate command checks.
kameo_es.workspace = true

# Async test runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Database access & migrations
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid", "chrono", "json", "migrate"] }

# Container runtime
testcontainers = { version = "0.27", features = ["reusable-containers"] }
testcontainers-modules = { version = "0.15", features = ["postgres"] }

# Database & Redis clients
redis.workspace = true

# Timestamps used by projector tests
chrono = { workspace = true }

# Deterministic IDs
uuid = { workspace = true, features = ["v7"] }

# Error handling / utilities
anyhow = { workspace = true }

# JSON for Redis events
serde_json = "1.0"

# Serialization for EAPPEND events
serde = { workspace = true }

# S3-compatible object storage via OpenDAL (Garage adapter for tests)
opendal = { version = "0.52", features = ["services-s3"] }

# Temporary files/directories for test fixture setup
tempfile = "3"

# Logging / tracing (for SierraDB/kameo_es debug output in CI)
ciborium = "0.2"
tracing-subscriber = { workspace = true }
rust_decimal.workspace = true

# Deterministic random for supervisor budget test
fastrand = "2"
